[project]
name = "example-inference"
version = "0.1.0"
description = "Stateless LLM Inference Gateway for Tagentacle"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "openai>=1.0",
]

[tool.uv.sources]
tagentacle-py-core = { path = "../tagentacle-py-core", editable = true }
